--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/CelestialWedding/FileContentIndex/002520fa-b76b-4f2b-975a-c0f6604665a6.vsidx
+/.vs/CelestialWedding/FileContentIndex
