--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 
 /.vs/CelestialWedding/FileContentIndex/002520fa-b76b-4f2b-975a-c0f6604665a6.vsidx
 /.vs/CelestialWedding/FileContentIndex
+/.vs/SPC_Assignment/v17
+/.vs/CelestialWedding/v17
