Login CRUD done but need Decor later...

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /.vs/CelestialWedding/FileContentIndex/002520fa-b76b-4f2b-975a-c0f6604665a6.vsidx
 /.vs/CelestialWedding/FileContentIndex
 /.vs/CelestialWedding/v17
+/.vs/SPC_Assignment/FileContentIndex/1c7afbad-89bc-476c-b424-25468aedf6d0.vsidx
