--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /.vs/CelestialWedding/FileContentIndex
 /.vs/CelestialWedding/v17
 /.vs/SPC_Assignment/FileContentIndex/1c7afbad-89bc-476c-b424-25468aedf6d0.vsidx
+*.vsidx
